2006-12-14  Brian Bidulock  <bidulock@openss7.org>

	- debian script corrections from Michael Fig <fig@marketsystems.com>

	* debian/mscript_postinst.in: debian script corrections
	* debian/mscript_postrm.in: debian script corrections
	* debian/mscript_preinst.in: debian script corrections
	* debian/rules.in: debian script corrections
	* debian/strinet-devel.preinst.in: debian script corrections

2006-12-08  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/rawip.c: changes to bufq locking
	* src/drivers/udp.c: changes to bufq locking
	* src/util/init/strinet.sh: name correction for debian init script

2006-10-30  Brian Bidulock  <bidulock@openss7.org>

	* tests/local.at: added ability to sync between test cases
	* tests/testsuite-inet_raw.at: added ability to sync between test cases
	* tests/testsuite-inet_raw2.at: added ability to sync between test cases
	* tests/testsuite-inet_sctp.at: added ability to sync between test cases
	* tests/testsuite-inet_tcp.at: added ability to sync between test cases
	* tests/testsuite-inet_udp.at: added ability to sync between test cases
	* tests/testsuite-inet_udp2.at: added ability to sync between test cases

2006-10-27  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: change linux/config.h to autoconf.h for 2.6.18

2006-10-21  Brian Bidulock  <bidulock@openss7.org>

	* strinet.lsm.in: updated streams release number
	* debian/control.in: updated streams release number
	* doc/man/strinet.refs: updated streams release number
	* doc/manual/releases.texi: updated streams release number
	* doc/man/strisdn.refs: updated streams release number
	* debian/control.in: updated LiS release number
	* doc/manual/releases.texi: updated LiS release number

2006-10-19  Brian Bidulock  <bidulock@openss7.org>

	* src/include/sys/xti_sctp.h: added ETSI SACK frequency option

2006-10-12  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: removed redundant debug flags
	* src/drivers/rawip.c: removed redundant debug flags