@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $RCSfile: test-inet_tcp.c,v $ $Name:  $($Revision: 0.9.2.46 $) $Date: 2006/08/16 07:47:59 $
+ @(#) $RCSfile: test-inet_tcp.c,v $ $Name:  $($Revision: 0.9.2.47 $) $Date: 2006/12/18 07:53:48 $
 
  -----------------------------------------------------------------------------
 
@@ -59,11 +59,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2006/08/16 07:47:59 $ by $Author: brian $
+ Last Modified $Date: 2006/12/18 07:53:48 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: test-inet_tcp.c,v $
+ Revision 0.9.2.47  2006/12/18 07:53:48  brian
+ - resolve device numbering
+
  Revision 0.9.2.46  2006/08/16 07:47:59  brian
  - correct addresses
 
@@ -235,9 +238,9 @@
 
  *****************************************************************************/
 
-#ident "@(#) $RCSfile: test-inet_tcp.c,v $ $Name:  $($Revision: 0.9.2.46 $) $Date: 2006/08/16 07:47:59 $"
+#ident "@(#) $RCSfile: test-inet_tcp.c,v $ $Name:  $($Revision: 0.9.2.47 $) $Date: 2006/12/18 07:53:48 $"
 
-static char const ident[] = "$RCSfile: test-inet_tcp.c,v $ $Name:  $($Revision: 0.9.2.46 $) $Date: 2006/08/16 07:47:59 $";
+static char const ident[] = "$RCSfile: test-inet_tcp.c,v $ $Name:  $($Revision: 0.9.2.47 $) $Date: 2006/12/18 07:53:48 $";
 
 /*
  *  Simple test program for INET streams.
@@ -317,7 +320,11 @@ static const char *lpkgname = "OpenSS7 INET Driver - TCP";
 static const char *lstdname = "XNS 5.2/TPI Rev 2";
 static const char *sstdname = "XNS/TPI";
 static const char *shortname = "INET/TCP";
+#ifdef LFS
+static char devname[256] = "/dev/streams/clone/tcp";
+#else
 static char devname[256] = "/dev/tcp";
+#endif
 
 static const int test_level = T_INET_TCP;
 
